assets/style.css
/* Navigation Bar */

body {
    margin: 0;
}

nav {
    text-decoration: none;
    text-align: right;
    padding-right: 20%;
    padding: 1em 20% 1em 0em;
}

li {
    display: inline;
    padding: 1rem;
    font-size: 18px;
}

#logo {
    float: left;
    padding-left: 20%;
    padding-top: 1em;
}

#quote {
    padding: 1em;
    font-size: 16px;
    color: white;
    background-color: #ff9100;
    border-radius: 36px;
    border-color: white;
    border-left-width: 0;
    border-right-width: 0;
    border-bottom-width: 0;
    border-top-width: 0;
}

#hero-image{
    max-width: 100%;
}

/* About Us Section */


#contentContainer {
    width: 60%;
    margin-right: auto;
    margin-left: auto;
}

.itemContainer {
    width: 100%;
    display: flex;
    padding: 5vh 0;
    justify-content: space-between;
    align-items: center;
}

.itemRight, .itemLeft {
    max-width: 47%;
    max-height: 500px;
    margin-right: auto;
    border-radius: 5%;
}

#Who_Are_We {
    color: #ff9100;
    font-weight: bolder;
    font-size: 1.2em;
    margin-bottom: 0;
}

#About_Heading {
    color: #00184c;
    font-size: 2.5em;
}

p {
    font-size: 20px;
    color: rgb(61, 61, 61);
    line-height: 1.5em;
    letter-spacing: 0.2px;
}

#OurWorkBtn{
    padding: 1em;
    font-size: 16px;
    color: white;
    background-color: #ff9100;
    border-radius: 36px;
    border-color: white;
    border-left-width: 0;
    border-right-width: 0;
    border-bottom-width: 0;
    border-top-width: 0;
    text-align: center;
    float: left;
}

.itemLeft > div {
    margin-top: 5%;
}

.imgLeft {
    max-width: 47%;
    max-height: 800px;
    margin-right: auto;
    float: left;
    border-radius: 5%;
}

.imgAboutUsRight{
    max-width: 100%;
    max-height: 800px;
    margin-right: auto;
    float: right;
    border-radius: 5%;
}

.imgRight {
    max-width: 47%;
    max-height: 800px;
    margin-right: auto;
    float: right;
    border-radius: 5%;
}

#serviceContainer {
    margin-top: 10%;
    text-align: center;
}

#serviceHeader {
    color: #313c4d;
    font-size: 36px;
}

.itemContainerServices {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 5%;
}

h3 {
    color:rgb(61, 61, 61);
    font-size: 22px;
}

#serviceHeader02 {
    color: #ff9100;
    font-size: 36px;
    margin-top: 0;
}

#serviceContainer02 {
    margin-top: 5%;
    text-align: center;
}

.extraList > li {
    display: inline;
    padding: 1rem;
    font-size: 18px;
    text-align: center;
    color: #00184c;
    font-weight: bolder;
}

#reviewContainer {
    margin-right: auto;
    margin-left: auto;
    padding-bottom: 5%;
}

#review {
    width: 33%;
    float: left;
    color: rgb(209, 209, 209);
}

#star {
    color: #ff9100;
    width: 33%;
    float: left;
    margin-bottom: 0%;
}

#tick {
    color: #ff9100;
}

.blueBackground {
    background-color: rgb(0, 24, 77, 95%);
    padding-bottom: 3%;
    border-top: #ff9100 5px solid;
    border-bottom: #ff9100 5px solid;
}

#serviceHeader03{
    color: rgb(209, 209, 209);
    font-size: 36px;
    margin-top: 5%;
    text-align: center;
}

#contentContainer02 {
    width: 60%;
    margin-right: auto;
    margin-left: auto;
    overflow: hidden;
}

#galleryContainer {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
}

.galleryImage {
    max-width: 400px;
    max-height: 200px;
    visibility: visible;
}

.photo {
    display: inline;
}

